--- a/y2024/Crescendo/WebDash.html
+++ b/y2024/Crescendo/WebDash.html
@@ -1,22 +1,34 @@
 <dashboard-tab
-    tab-name="TeleOperated"
+    tab-name="Drivers"
     slot="tab"
     source-provider="NetworkTables"
 ><frc-sendable-chooser
         source-provider="NetworkTables"
         selected="leave wing"
-        style="transform: translate(166px, 86px);"
+        style="transform: translate(118px, 144px);"
         source-key="/SmartDashboard/Auto Chooser"
         options="[]"
-    ></frc-sendable-chooser><frc-network-alerts
+    ></frc-sendable-chooser><frc-basic-fms-info
         source-provider="NetworkTables"
-        style="transform: translate(166px, 216px);"
+        style="transform: translate(132px, 61px);"
+        source-key="/FMSInfo"
+    ></frc-basic-fms-info></dashboard-tab><dashboard-tab
+    tab-name="Pit"
+    slot="tab"
+    source-provider="NetworkTables"
+><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(60px, 86px);"
+        source-key="/Shuffleboard/test commands/Arm to coast"
+    ></frc-robot-command><frc-network-alerts
+        source-provider="NetworkTables"
+        style="transform: translate(299px, 101px);"
         source-key="/SmartDashboard/Alerts"
         errors="[]"
         warnings="[]"
         infos="[]"
     ></frc-network-alerts></dashboard-tab><dashboard-tab
-    tab-name="Test Commands"
+    tab-name="Programmers Tab"
     slot="tab"
     source-provider="NetworkTables"
 ><frc-robot-command
@@ -26,11 +38,11 @@
     ></frc-robot-command><super-structure
         source-key="/SmartDashboard/super structure"
         source-provider="NetworkTables"
-        style="width: 460px; height: 315px; transform: translate(267px, 28px);"
+        style="width: 460px; height: 315px; transform: translate(336px, 264px);"
     >
     </super-structure><frc-robot-command
         source-provider="NetworkTables"
-        style="transform: translate(25px, 17px); width: 170px; height: 50px;"
+        style="transform: translate(25px, 17px); width: 273px; height: 72px;"
         source-key="/Shuffleboard/test commands/Teleop: David Drive"
     ></frc-robot-command><frc-robot-command
         source-provider="NetworkTables"
@@ -44,11 +56,17 @@
         source-provider="NetworkTables"
         style="transform: translate(46px, 345px);"
         source-key="/Shuffleboard/test commands/Auto-Shoot in Amp"
-    ></frc-robot-command></dashboard-tab><dashboard-tab
+    ></frc-robot-command><frc-field-wrapper
+        source-key="/SmartDashboard/Field"
+        source-provider="NetworkTables"
+        style="transform: translate(379px, 12px);"
+        game="Crescendo"
+        grid-size="1"
+    >
+    </frc-field-wrapper></dashboard-tab><dashboard-tab
     tab-name="Arm Pivot"
     slot="tab"
     source-provider="NetworkTables"
-    selected=""
 ><frc-line-chart
         chart-title="Line Chart"
         source-provider="NetworkTables"
@@ -118,6 +136,7 @@
         source-key="/Arm Pivot Subsystem/Rel Encoder Position"
         min="NaN"
         max="NaN"
+        placeholder=""
     ><input
             slot="input"
             value="0"
@@ -148,6 +167,7 @@
         source-key="/SmartDashboard/super structure/PivotMotorPercentage"
         min="NaN"
         max="NaN"
+        placeholder=""
     ><input
             slot="input"
             value="0"
@@ -178,6 +198,7 @@
         source-key="/Arm Pivot Subsystem/Abs Encoder Position"
         min="NaN"
         max="NaN"
+        placeholder=""
     ><input
             slot="input"
             value="0"
@@ -284,6 +305,7 @@
         source-key="/Shooter Subsystem/Velocity (RPM)"
         min="NaN"
         max="NaN"
+        placeholder=""
     ><input
             slot="input"
             value="0"
@@ -314,6 +336,7 @@
         source-key="/SmartDashboard/super structure/ShooterMotorPercentage"
         min="NaN"
         max="NaN"
+        placeholder=""
     ><input
             slot="input"
             value="0"
@@ -343,6 +366,7 @@
     tab-name="Intake"
     slot="tab"
     source-provider="NetworkTables"
+    selected=""
 ><frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(55px, 69px); width: 178px; height: 50px;"
@@ -355,7 +379,63 @@
         source-provider="NetworkTables"
         style="transform: translate(73px, 252px);"
         source-key="/SmartDashboard/super structure/HasGamePiece"
-    ></frc-boolean-box></dashboard-tab><dashboard-tab
+        true-color="#ffa200"
+        false-color="#b4a7a7"
+    ></frc-boolean-box><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(350px, 128px);"
+        source-key="/Shuffleboard/test commands/intake until piece"
+    ></frc-robot-command><vaadin-number-field
+        label="Label"
+        value="0"
+        has-label=""
+        source-provider="NetworkTables"
+        style="transform: translate(253px, 314px);"
+        source-key="/Preferences/Intake_In_Speed"
+        has-controls=""
+        has-value=""
+        placeholder=""
+        min="NaN"
+        max="NaN"
+        hascontrols=""
+    ><input
+            slot="input"
+            value="0"
+            type="number"
+            id="vaadin-number-field-185"
+            aria-labelledby="label-vaadin-number-field-205"
+            aria-describedby=""
+            min="undefined"
+            max="undefined"
+            step="any"
+            tabindex="0"
+        ><label
+            slot="label"
+            id="label-vaadin-number-field-205"
+            for="vaadin-number-field-185"
+        >Label</label>
+        <div
+            slot="error-message"
+            id="error-message-vaadin-number-field-152"
+            hidden=""
+        ></div>
+    </vaadin-number-field><frc-line-chart
+        chart-title="Line Chart"
+        source-provider="NetworkTables"
+        style="transform: translate(586px, 78px);"
+    >
+        <frc-line-chart-legend source-provider="NetworkTables"></frc-line-chart-legend>
+        <frc-line-chart-axis source-provider="NetworkTables"></frc-line-chart-axis>
+        <frc-line-chart-axis
+            side="right"
+            source-provider="NetworkTables"
+        ></frc-line-chart-axis>
+        <frc-line-chart-data
+            source-provider="NetworkTables"
+            display-name="Current (Amps)"
+            source-key="/Intake Subsystem/Current (Amps)"
+        ></frc-line-chart-data>
+    </frc-line-chart></dashboard-tab><dashboard-tab
     tab-name="Chassis"
     slot="tab"
     source-provider="NetworkTables"
